<?xml version="1.0" encoding="utf-8"?>
	<!--
		Copyright (C) 2010 Felix Bechstein
	-->
	<!--
		This file is part of TravelLog. This program is free software; you can
		redistribute it and/or modify it under the terms of the GNU General
		Public License as published by the Free Software Foundation; either
		version 3 of the License, or (at your option) any later version.
	-->
	<!--
		This program is distributed in the hope that it will be useful, but
		WITHOUT ANY WARRANTY; without even the implied warranty of
		MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU
		General Public License for more details. You should have received a
		copy of the GNU General Public License along with this program; If
		not, see <http://www.gnu.org/licenses/>.
	-->
<resources>
	<string name="app_version">0.5</string>
	<string name="app_name">TravelLog</string>
	<string name="lang">en</string>
	<string name="author_">Author:</string>
	<string name="version_">Version:</string>
	<string name="license_">License:</string>
	<string name="author">Felix Bechstein &lt;f@ub0r.de&gt;</string>
	<string name="license">GPLv3 - see http://www.gnu.org/licenses/gpl-3.0.txt</string>
	<string name="source_">Sourcescode:</string>
	<string name="source">http://github.com/felixb/travellog</string>
	<string name="website_">Website:</string>
	<string name="website">http://code.google.com/p/travellogdroid/</string>
	<string name="faq_">FAQ</string>
	<string name="faq_hint">Some tips and tricks, how to set up this app.</string>
	<string name="feedback_">Feedback</string>
	<string name="feedback_hint">Report bugs, request features ...</string>
	<string name="twitter_">twitter</string>
	<string name="twitter_hint">Follow me on twitter.\nGet update notifications etc.</string>
	<string name="donate_url">https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&amp;hosted_button_id=9284303</string>
	<string name="donate_mail">f@ub0r.de</string>
	<string name="donate_subject">I\'m the donator. My IMEI hash is...</string>
	<string name="donate_">Donate (Paypal)</string>
	<string name="donate_remove_ads_">Donate/remove ads</string>
	<string name="remove_ads_">Remove ads</string>
	<string name="predonate">This is an open-source application released under the GPLv3 license. It is free and will remain free. If you really like it or if you are annoyed by the ads, please consider donating (via paypal). I\'ll remove the ads for you with the next release.\nThank you!</string>
	<string name="postdonate">To remove ads, you need to load the noads code. It is available as soon the donation arrives. Please be patient and drop me a mail if it does not work after one day.</string>
	<string name="paypal_id_">To verify your donation your paypal id (mail address) is needed:</string>
	<string name="paypal_id_hint">Paypal id</string>
	<string name="load_hash_">Load noads code</string>
	<string name="signature_">You will receive a code back, you have to enter here, to finally remove the ads:</string>
	<string name="sig_loaded">Ads removed!</string>
	<string name="sig_failed">Failed to remove ads!</string>
	<string name="send_">Send</string>
	<string name="settings">Preferences</string>
	<string name="about_">About TravelLog</string>
	<string name="more_">More Apps..</string>
	<string name="changelog_">Changelog</string>
	<string name="about">TravelLog is a one-click-app to log your business trips for later accounting.</string>
	<string name="start_work">Start work</string>
	<string name="stop_work">Stop work</string>
	<string name="start_travel">Start travel</string>
	<string name="stop_travel">Stop travel</string>
	<string name="start_pause">Start pause</string>
	<string name="stop_pause">Stop pause</string>
	<string name="add_row">Add row</string>
	<string name="clear_">Clear</string>
	<string name="export_">Send as mail</string>
	<string name="export_subject">TravelLog export</string>
	<string name="export_footer">Check out TravelLog -</string>
	<string name="export_flip">Flip export upside down</string>
	<string name="appearance_">Appearance</string>
	<string name="theme_">Theme</string>
	<string name="textsize_">Text size</string>
	<string name="mail_">Mail address</string>
	<string name="mail__">Mail address to export data</string>
	<string name="for_">for</string>
	<string name="round_">Round time</string>
	<string-array name="state">
		<item>Nothing</item>
		<item>Pause</item>
		<item>Travel</item>
		<item>Work</item>
	</string-array>
	<string-array name="action">
		<item>Change date</item>
		<item>Change start time</item>
		<item>Change end time</item>
		<item>Change type</item>
		<item>Delete</item>
	</string-array>
	
	<string-array name="themes">
		<item>Black</item>
		<item>Light</item>
	</string-array>
	<string-array name="themes_values">
		<item>black</item>
		<item>light</item>
	</string-array>
	<string-array name="textsize">
		<item>Small</item>
		<item>Medium</item>
	</string-array>
	<string-array name="textsize_values">
		<item>small</item>
		<item>medium</item>
	</string-array>
</resources>
