<?xml version="1.0" encoding="utf-8"?>
	<!--
		Copyright (C) 2010 Felix Bechstein
	-->
	<!--
		This file is part of TravelLog. This program is free software; you can
		redistribute it and/or modify it under the terms of the GNU General
		Public License as published by the Free Software Foundation; either
		version 3 of the License, or (at your option) any later version.
	-->
	<!--
		This program is distributed in the hope that it will be useful, but
		WITHOUT ANY WARRANTY; without even the implied warranty of
		MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU
		General Public License for more details. You should have received a
		copy of the GNU General Public License along with this program; If
		not, see <http://www.gnu.org/licenses/>.
	-->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
	<PreferenceCategory android:title="@string/appearance_">
		<ListPreference android:title="@string/theme_"
			android:key="theme" android:entries="@array/themes"
			android:entryValues="@array/themes_values" />
		<ListPreference android:title="@string/textsize_"
			android:key="textsize" android:entries="@array/textsize"
			android:entryValues="@array/textsize_values" />
	</PreferenceCategory>
	<PreferenceCategory android:title="@string/settings">
		<EditTextPreference android:key="mail"
			android:title="@string/mail_" android:dialogTitle="@string/mail_"
			android:inputType="textEmailAddress" android:summary="@string/mail__" />
		<ListPreference android:key="round" android:title="@string/round_"
			android:entries="@array/round_" android:entryValues="@array/round"
			android:dialogTitle="@string/round_" />
		<CheckBoxPreference android:key="export_flip"
			android:title="@string/export_flip" />
	</PreferenceCategory>

	<PreferenceCategory android:title="@string/about_">
		<PreferenceScreen android:title="@string/about_"
			android:summary="@string/about_hint">
			<intent android:action="android.intent.action.MAIN"
				android:targetPackage="de.ub0r.android.travelLog"
				android:targetClass="de.ub0r.android.travelLog.ui.About" />
		</PreferenceScreen>
		<PreferenceScreen android:title="@string/feedback_"
			android:summary="@string/feedback_hint">
			<intent android:action="android.intent.action.VIEW"
				android:data="http://code.google.com/p/ub0rapps/issues/list" />
		</PreferenceScreen>
		<PreferenceScreen android:title="@string/twitter_"
			android:summary="@string/twitter_hint">
			<intent android:action="android.intent.action.VIEW"
				android:data="http://twitter.com/flx_b" />
		</PreferenceScreen>
		<PreferenceScreen android:title="@string/more_">
			<intent android:action="android.intent.action.VIEW"
				android:data="market://search?q=pub:&quot;Felix Bechstein&quot;" />
		</PreferenceScreen>
	</PreferenceCategory>
</PreferenceScreen>
