<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2010-2012 Felix Bechstein -->
<!--
		This file is part of TravelLog. This program is free software; you can
		redistribute it and/or modify it under the terms of the GNU General
		Public License as published by the Free Software Foundation; either
		version 3 of the License, or (at your option) any later version.
-->
<!--
		This program is distributed in the hope that it will be useful, but
		WITHOUT ANY WARRANTY; without even the implied warranty of
		MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU
		General Public License for more details. You should have received a
		copy of the GNU General Public License along with this program; If
		not, see <http://www.gnu.org/licenses/>.
-->
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/item_stop"
        android:icon="@drawable/ic_menu_stop"
        android:showAsAction="always|withText"
        android:title="@string/stop_work"/>
    <item
        android:id="@+id/start_work_"
        android:icon="@drawable/ic_menu_recent_history"
        android:showAsAction="always|withText"
        android:title="@string/start_work"/>
    <item
        android:id="@+id/start_travel_"
        android:icon="@drawable/ic_menu_recent_history"
        android:showAsAction="always|withText"
        android:title="@string/start_travel"/>
    <item
        android:id="@+id/start_pause_"
        android:icon="@drawable/ic_menu_recent_history"
        android:showAsAction="always|withText"
        android:title="@string/start_pause"/>
    <item
        android:id="@+id/item_settings"
        android:icon="@android:drawable/ic_menu_preferences"
        android:showAsAction="never"
        android:title="@string/settings"/>
    <item
        android:id="@+id/item_export"
        android:icon="@android:drawable/ic_menu_upload"
        android:showAsAction="never"
        android:title="@string/export_"/>
    <item
        android:id="@+id/item_clear"
        android:icon="@android:drawable/ic_menu_delete"
        android:showAsAction="never"
        android:title="@string/clear_"/>
    <item
        android:id="@+id/item_donate"
        android:icon="@drawable/ic_menu_star"
        android:showAsAction="never"
        android:title="@string/donate_remove_ads_"/>

</menu>