<?xml version="1.0" encoding="utf-8"?>
	<!--
		Copyright (C) 2010-2011 Felix Bechstein
	-->
	<!--
		This file is part of TravelLog. This program is free software; you can
		redistribute it and/or modify it under the terms of the GNU General
		Public License as published by the Free Software Foundation; either
		version 3 of the License, or (at your option) any later version.
	-->
	<!--
		This program is distributed in the hope that it will be useful, but
		WITHOUT ANY WARRANTY; without even the implied warranty of
		MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU
		General Public License for more details. You should have received a
		copy of the GNU General Public License along with this program; If
		not, see <http://www.gnu.org/licenses/>.
	-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" android:layout_width="fill_parent"
	android:background="?android:attr/colorBackground"
	android:layout_height="fill_parent">
	<LinearLayout android:layout_width="fill_parent"
		android:layout_height="wrap_content" android:layout_weight="0"
		android:paddingTop="2dip">
		<Button android:text="" android:id="@+id/stop"
			android:layout_width="fill_parent" android:layout_height="wrap_content"
			android:layout_weight="1" />
		<Button android:text="@string/start_work" android:id="@+id/start_work_"
			android:layout_width="fill_parent" android:layout_height="wrap_content"
			android:layout_weight="1" />
		<Button android:text="@string/start_travel" android:id="@+id/start_travel_"
			android:layout_width="fill_parent" android:layout_height="wrap_content"
			android:layout_weight="1" />
		<Button android:text="@string/start_pause" android:id="@+id/start_pause_"
			android:layout_width="fill_parent" android:layout_height="wrap_content"
			android:layout_weight="1" />
	</LinearLayout>
	<ListView android:id="@+id/log" android:layout_width="fill_parent"
		android:layout_height="wrap_content" android:layout_weight="1">
	</ListView>
	<Button android:text="@string/add_row" android:id="@+id/add_row_"
		android:layout_width="fill_parent" android:layout_height="wrap_content" />
	<LinearLayout android:id="@+id/ad"
		android:layout_alignParentBottom="true" android:visibility="gone"
		android:layout_width="fill_parent" android:layout_height="wrap_content"
		android:cacheColorHint="?android:attr/colorBackground"
		android:gravity="center_horizontal" />
</LinearLayout>
